--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="image-container"><img src="LIQUIDGALAXYLOGO.svg" alt="" height="150px" width="auto"></div>
     <p class="info">Send your images in the format "NAME - INFO". JPG/JPEG/PNG are supported.</p>
     <div class="row-menu">
-        <input id="image-input" type="file" multiple="multiple" accept="image/jpeg, image/png, image/jpg">
+        <input id="image-input" type="file" multiple="multiple" accept="image/jpeg, image/png, image/jpg, image/webp, image/heic, image/avif, image/svg">
         <label for="number">Columns:</label>
         <input id="inputNumber" value="8" type="text" name="number" />
         <a href="javascript:void(0);" onclick="generateScreenshot();">Download Collage</a>
